Receita de bolo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Receita de bolo</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Receita de bolo</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Cardápio</a></li>
+                <li><a href="horario.html">Horário</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Bolo de chocolate</h2>
+            <figure>
+                <img 
+                style="width: 150px; height: 150px;" 
+                src="https://cloudfront-us-east-1.images.arcpublishing.com/estadao/FIVYQFU6J5ND3PYRA6XQHR4NW4.jpg"
+                alt="imagem de bolo"
+                />
+                <figcaption>Figura 1</figcaption>
+            </figure>
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
