--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receita de bolo</title>
-</head>
-<body>
+    <title>Home</title>
+</head>    
+</body> <link rel="stylesheet" type="text/css" href="style.css">
     <header>
-        <h1>Receita de bolo</h1>
+        <h1>PlayerTeste</h1>
         <nav>
             <ul>
-                <li><a href="#">Cardápio</a></li>
-                <li><a href="horario.html">Horário</a></li>
+                <li><a href="index.html">Home</a> <a href="produtos.html">Produtos</a> <a href="biblioteca.html">Biblioteca</a> <a href="sobre.html">Sobre nós</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Bolo de chocolate</h2>
+            <h2>Produtos em promoção</h2>
             <figure>
                 <img 
                 style="width: 150px; height: 150px;" 
-                src="https://cloudfront-us-east-1.images.arcpublishing.com/estadao/FIVYQFU6J5ND3PYRA6XQHR4NW4.jpg"
-                alt="imagem de bolo"
+                src="https://cdn.icon-icons.com/icons2/37/PNG/512/Pricetag_precio_4229.png"
+                alt="pricetag"
                 />
-                <figcaption>Figura 1</figcaption>
+                <li><a href="promocao.html">Produtos em promoção</a></li>
             </figure>
 
         </section>
